--- a/_posts/2025-07-09-Happy_LLM.md
+++ b/_posts/2025-07-09-Happy_LLM.md
@@ -1194,13 +1194,9 @@ output=[MASK]<completion_1>[MASK]<completion_2>[MASK]<completion_3>
 
     - 通过学习 DPO 所提出的优化目标，可以直接学习人类偏好，而无需再训练 RM 以及进行强化学习。只需要两个 LLM 即可完成训练，且训练过程相较 PPO 简单很多。
 
-## 第五章：
+## 第五章 + 第六章：大模型预训练与微调
 
-- 暂跳
-
-## 第六章：
-
-- 暂跳
+- 选择融入到 Datawhale 的另一门课程 Self-llm 来学
 
 ## 第七章：大模型应用
 
@@ -1375,7 +1371,7 @@ def get_chunk(cls, text : str, max_token_len : int = 600, cover_content : int = 
 $$
 \begin{equation}
     \text{CosineSimilarity}(\vec{A}, \vec{B}) = \frac{\vec{A} \cdot \vec{B}}{||\vec{A}|| \cdot ||\vec{B}||}
-    % \label{eq:cosine_similarity}
+    \label{eq:cosine_similarity}
 \end{equation}
 $$
 
